Fix spacing

--- a/themes/shami.blog/assets/hugo.css
+++ b/themes/shami.blog/assets/hugo.css
@@ -641,6 +641,18 @@ ul, ol {
   margin-left: 0px;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -798,8 +810,24 @@ ul, ol {
   padding-left: 2.25rem;
 }
 
-.text-left {
-  text-align: left;
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
